Fixed icon height which caused menu to be toggled wrongly

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -32,7 +32,8 @@
         background: $white;
         
         i {
-            margin: calc(#{$border-thickness} / 2) 0;
+            margin: calc((#{$border-thickness} - 18px) / 2) 0;
+            height: 18px;
         }
         
         
