Replaced custom carousel with a third party

--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -1,34 +1,24 @@
 @import "../__variables.scss";
 
 .carousel-component-container {
-    display: flex;
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background: $light-grey;
     
-    .scrollbar-mask {
-        display: flex;
+    .slider, .slider-frame, .slider-list, .slider-slide {
+        height: 100% !important;
+    }
+
+    .image-container {
         height: 100%;
         width: 100%;
-        overflow-x: scroll;
         
-        &::-webkit-scrollbar {
-            display: none;
+        img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
         }
-        
-        @media #{$desktop} {
-            &:after {
-                content: '';
-                padding-left: 39%;
-            }
-        }
-        
     }
     
-    img {
-        object-fit: cover;
-        height: 100%;
-        min-width: 100vh;
-    }
+    button { display: none; }
 }
