--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     
     .separator { margin: 0 4px; }
 }
