--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -43,6 +43,10 @@
             align-items: center;
         }
         
+        @media #{$mobile} {
+            position: absolute;
+        }
+        
         @media #{$tablet} {
             background: $white;
             height: 100%;
