--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -1,6 +1,42 @@
 @import "../__variables.scss";
 
-.carousel-component-container {
+.carousel-container {
+    height: 100%
+}
+
+.scroll-carousel-component-container {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: $light-grey;
+    
+    .scrollbar-mask {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        overflow-x: scroll;
+        
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        
+        @media #{$desktop} {
+            &:after {
+                content: '';
+                padding-left: 39%;
+            }
+        }
+    }
+    
+    img {
+        object-fit: cover;
+        height: 100%;
+        min-width: 100vh;
+    }
+}
+
+.snap-carousel-component-container {
     height: 100%;
     width: 100%;
     overflow: hidden;
