Can now see entire photo on the photography project page on mobile

--- a/src/styles/components/photography.project.scss
+++ b/src/styles/components/photography.project.scss
@@ -19,6 +19,10 @@
     .carousel-container {
         flex: 1;
         @media #{$mobile} { margin: $border-thickness 0; }
+        
+        @media #{$mobile}, #{$tablet} {
+            img { object-fit: contain; }
+        }
     }
     
     .photo-detail {
