Changed carousel dots to white

--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -48,6 +48,10 @@
     .slider-decorator-0, .slider-decorator-1 {
         display: none;
     }
+    
+    button {
+        color: white !important;
+    }
 
     .image-container {
         height: 100%;
