--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -165,6 +165,11 @@
                 margin: 0.35em 0;
                 @media #{$mobile} { margin: 0.2em; }
             }
+            
+            a {
+                font-size: 22px;
+                text-decoration: none;
+            }
         }
         
         .credit-container {
