Changed copyright year and pointing to my github

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -177,6 +177,7 @@
             
             div { font-size: 13px; }
             .social-links-container { margin-bottom: 10px; }
+            a, a:visited { color: white; }
         }
     }
 }
