Everything is green now

--- a/src/styles/__variables.scss
+++ b/src/styles/__variables.scss
@@ -2,7 +2,7 @@ $font-stack: 'Raleway', sans-serif;
 $border-thickness: 65px;
 
 // Colors
-$blue: #002978;
+$green: #174b46;
 $dark-grey: #4A4A4A;
 $light-grey: #D8D8D8;
 $white: white;
