--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -95,7 +95,7 @@
             padding: #{$border-thickness};
         }
         
-        background: $blue;
+        background: $green;
         margin: 0 $border-thickness;
         width: calc(100% - #{$border-thickness});
         height: 100%;
